[GovWayConsole, GovWayMonitor] I criteri di ricerca nello storico delle transazioni effettuate tramite la console di monitoraggio possono ora essere salvati, rendendoli disponibili per un accesso rapido in futuro. Le ricerche possono essere salvate con visibilità privata, risultando così disponibili solo all'utente che le ha create, oppure con visibilità pubblica, per renderle accessibili a tutti gli utenti. Inoltre, è possibile salvare anche i criteri di generazione dei report statistici.
Squashed commit of the following:

commit 586ebafcc321f2e23bafbc00e4f31d864127010c
Author: Giuliano Pintori <pintori@link.it>
Date:   Tue Oct 1 19:02:13 2024 +0200

    [GovWayMonitor]
    Aggiunto supporto per il salvataggio delle ricerche utente nelle varie
    sezioni della console di monitoraggio.
    Aggiunta sezione per la gestione delle proprie ricerche, comprensiva di
    funzione di import/export per la condivisione con altri utenti.

    [GovWayConsole]
    Modificata eliminazione degli utenti per visualizzare un messaggio di
    avviso nel caso in cui gli utenti che si stanno eliminando possiedano
    delle ricerche pubbliche.